# devops-copilot

./: .gitignore  Dockerfile  README.md  demo.py  devops_demo.py  docker-compose.yml  final_verify.py  pyproject.toml
data/: .gitkeep
devops_copilot/: api.py
devops_copilot/agents/: base.py  workflow_agents.py
devops_copilot/core/: config.py  engine.py  log_storage.py  memory.py  observability.py  persistence.py  resilience.py  telemetry.py
devops_copilot/tools/: devops_tools.py  registry.py  standard_tools.py
devops_copilot/utils/: logger.py
infra/grafana/dashboards/: devops_copilot.json
infra/grafana/provisioning/dashboards/: provider.yml
infra/prometheus/: prometheus.yml
